Changes for 1.5.2.1
* Fixed possible Null Pointer error for maps with a production frontier of null rules. (veqryn)

* Fixed possible IllegalStateException in Air Battles. (veqryn)

* Allowed "Edit Moving" of units not owned by you, to create a battle by the unit's owner. (veqryn)

* Fixed 'uses' for 'when' based triggers to be used up right after they are used, while triggers without when set get 'used up' at the end of each round that they are used in. (veqryn)

* Fixed Air Battle to only allow aircraft capable of intercepting into the battle, instead of also allowing infrastructure too. (veqryn)


Changes for 1.5.2
* Fixed infinite loop in getAllProducers for a sea placement. (veqryn)

* Removing BattleResults from BattleRecord until we figure out the problem (probably non Serializable) with it always causing the BattleRecordsList to be null. (veqryn) 

* Moved all AI related code to new package. (veqryn)

* Fixing the bugs introduced into the engine, and the failing unit tests due to changes in how battles were abstracted, and how they are now recorded when finished. (veqryn)

* Created new type of battle, FinishedBattle (scripted), to handle blitzed and conquered territories. (veqryn)

* Created new Rules Attachment and Condition Attachment option, "battle", which can be used to test for the presence of battles. (veqryn)

* Major abstraction and cleanup of all battle related classes. (veqryn)

* Fixing bad comparisons, and fixing missing hashCode methods. (veqryn)

* Forced user preferences for individual sound muting choices to be saved by each local vm. (veqryn)

* Allowed individual sounds to be muted, and separated simple Messenging from Slapping with different sounds for each. (frigoref)

* Rewrote the framework for how sounds are loaded and played, in order to allow more flexible expansion of sound options. Moved sound files to separate user visible folder. (frigoref)
