@@ -37,6 +37,7 @@ import javax.swing.SwingUtilities;
 
 public class GameSelectorPanel extends JPanel implements Observer
 {
+	private static final long serialVersionUID = -4598107601238030020L;
 	private JLabel m_nameText;
 	private JLabel m_versionText;
 	private JLabel m_fileNameLabel;
@@ -127,8 +128,11 @@ public class GameSelectorPanel extends JPanel implements Observer
 		m_roundText = new JLabel();
 		m_fileNameText = new JLabel();
 		m_loadNewGame = new JButton("Choose Game...");
+		m_loadNewGame.setToolTipText("<html>Select a game from all the maps/games that come with TripleA, <br>and the ones you have downloaded.</html>");
 		m_loadSavedGame = new JButton("Load Saved Game...");
+		m_loadSavedGame.setToolTipText("Load a previously saved game, or an autosave.");
 		m_gameOptions = new JButton("Game Options...");
+		m_gameOptions.setToolTipText("<html>Set options for the currently selected game, <br>such as enabling/disabling Low Luck, or Technology, etc.</html>");
 	}
 	
 	private void layoutComponents()
